# bingo

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Containerfile  LICENSE  coverage.json  podman-compose.yml  pyproject.toml
.agents/workflow-utilities/scripts/vcs/: azure_adapter.py  github_adapter.py  provider.py
.claude/skills/workflow-utilities/scripts/vcs/: config.py
.github/workflows/: claude-code-review.yml  claude.yml  test.yml
output/: meet-me-in-st-louis_cards-festive.html  meet-me-in-st-louis_introduction.html  meet-me-in-st-louis_introduction.md  vintage-christmas-films_cards-festive.html  vintage-christmas-films_introduction.html
output/archive/: vintage-christmas-films_introduction.md
planning/meet-me-st-louis-festive-output/: CLAUDE.md  README.md  architecture.md  epics.md  requirements.md
planning/meet-me-st-louis-festive-output/ARCHIVED/: CLAUDE.md
planning/vintage-christmas-films/: CLAUDE.md  README.md  architecture.md  epics.md  requirements.md
planning/vintage-christmas-films/ARCHIVED/: CLAUDE.md
specs/meet-me-st-louis-festive-output/: CLAUDE.md  README.md  plan.md  spec.md
specs/meet-me-st-louis-festive-output/ARCHIVED/: CLAUDE.md  README.md
specs/vintage-christmas-films/: CLAUDE.md  README.md  plan.md  spec.md
specs/vintage-christmas-films/ARCHIVED/: CLAUDE.md  README.md
src/bingo/: __init__.py  card.py  cli.py  data.py  html_pdf.py  pdf.py
tests/: __init__.py  test_card.py  test_cli.py  test_data.py  test_html_pdf.py  test_pdf.py
